Search now working correctly

--- a/java/football-results/src/main/webapp/index.html
+++ b/java/football-results/src/main/webapp/index.html
@@ -7,6 +7,7 @@
 <body>
 	Welcome to the Stelinno Football Results
 	<div><a href="/results/crawl.ctl">crawl</a></div>
+	<div><a href="/results/find.ctl?query=b*">find</a></div>
 	<div><a href="/results/get.ctl">get results</a></div>
 	<div><a href="/version.ctl">version</a></div>
 	<footer>
